--- a/panel.html
+++ b/panel.html
@@ -6,15 +6,23 @@
     body, html {
       margin: 0;
       height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    iframe {
-      width: 100%;
-      height: 100%;
+    .button {
+      padding: 20px 40px;
+      font-size: 24px;
+      background: #222;
+      color: #fff;
       border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://panel-teamxidofficiall.vinnprivat.com"></iframe>
+  <a class="button" href="https://panel-teamxidofficiall.vinnprivat.com" target="_blank">Buka Panel Team X-ID</a>
 </body>
 </html>
