--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
   <div class="container">
     <h1>WELCOME<br>MEMBER TEAM X-ID</h1>
-    <div class="marquee"><span id="running-text">Selamat datang di sistem Team X-ID Official!</span></div>
+    <div class="marquee"><span id="running-text">Welcome to the anti bypass login system by chris project team x id, this apk is specifically used for login team panel website!</span></div>
 
     <input type="text" id="username" placeholder="Username">
     <input type="password" id="password" placeholder="Password">
