--- a/panel.html
+++ b/panel.html
@@ -6,10 +6,12 @@
     body, html {
       margin: 0;
       height: 100%;
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #f4f4f4;
+      /* Gradasi ungu-hitam */
+      background: linear-gradient(135deg, #8e2de2 0%, #1a1a2e 100%);
       font-family: Arial, sans-serif;
     }
     .container {
@@ -78,6 +80,31 @@
       font-weight: bold;
       text-align: center;
     }
+    /* Card tambahan */
+    .info-cards {
+      width: 100%;
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      align-items: stretch;
+      animation: fadeIn 0.7s;
+    }
+    .info-card {
+      background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);
+      color: #fff;
+      border-radius: 8px;
+      padding: 18px 14px;
+      font-size: 17px;
+      box-shadow: 0 2px 10px rgba(34, 34, 34, 0.07);
+      text-align: center;
+      font-weight: bold;
+      letter-spacing: 0.5px;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px);}
+      to { opacity: 1; transform: translateY(0);}
+    }
   </style>
 </head>
 <body>
@@ -103,8 +130,16 @@
     </div>
     <button class="button" id="loginBtn" onclick="bukaPanel()" disabled>Lanjut Login Panel</button>
     <div class="footer">🚫PATUHI PERATURAN🚫</div>
+    <!-- Card Info tambahan (disembunyikan dulu) -->
+    <div class="info-cards" id="infoCards" style="display:none;">
+      <div class="info-card" id="statusAktif">Status Aktif: <span id="lamaAktif"></span></div>
+      <div class="info-card">Pembuat Web: <span>ANONIMCHR</span></div>
+      <div class="info-card">Nama Team: <span>TEAM X-ID</span></div>
+    </div>
   </div>
   <script>
+    var aktifSince; // waktu login ditekan
+
     function toggleButton() {
       var checkBox = document.getElementById('agree');
       var btn = document.getElementById('loginBtn');
@@ -112,9 +147,34 @@
     }
 
     function bukaPanel() {
-      // Ganti window.open jadi location.href
-      var link = atob("aHR0cHM6Ly9wYW5lbC10ZWFteGlkb2ZmaWNpYWxsLnZpbm5wcml2YXQuY29t");
-      window.location.href = link;
+      // Set waktu login sekarang
+      aktifSince = Date.now();
+      // Tampilkan card info
+      document.getElementById('infoCards').style.display = 'flex';
+      updateActiveTime(); // Update waktu aktif pertama kali
+      // Mulai update tiap detik
+      window.activeInterval = setInterval(updateActiveTime, 1000);
+
+      // Optional: disable tombol supaya tidak dobel klik
+      document.getElementById('loginBtn').disabled = true;
+
+      // Jika tetap ingin redirect, gunakan timeout agar bisa lihat info dulu
+      // window.location.href = atob("aHR0cHM6Ly9wYW5lbC10ZWFteGlkb2ZmaWNpYWxsLnZpbm5wcml2YXQuY29t");
+    }
+
+    function updateActiveTime() {
+      if (!aktifSince) return;
+      var now = Date.now();
+      var diff = now - aktifSince;
+      // ubah ke format jam:menit:detik
+      var detik = Math.floor(diff / 1000) % 60;
+      var menit = Math.floor(diff / 60000) % 60;
+      var jam = Math.floor(diff / 3600000);
+      var str = '';
+      if (jam) str += jam + ' jam ';
+      if (menit) str += menit + ' menit ';
+      str += detik + ' detik';
+      document.getElementById('lamaAktif').textContent = str;
     }
   </script>
 </body>
